<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:ignore="MissingDefaultResource">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_nmck_author"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_nmck_author"
        app:layout_constraintEnd_toEndOf="@+id/name_organization_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_organization_edit"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_nmck_NG"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_guards"
        app:layout_constraintEnd_toEndOf="@+id/edit_nmck_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nmck_author"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options_step"
        style="@style/Widget.AppTheme.OptionsButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        app:icon="@drawable/ic_option_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_organization_edit"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/Name_organization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/deleted"
        android:layout_width="40dp"
        android:layout_height="40dp"
        style="@style/Widget.AppTheme.OptionsButton"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:checkable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="223dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppTheme.OptionsButton"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nmck_NG" />

</androidx.constraintlayout.widget.ConstraintLayout>