<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.CurrentNMCKFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_organization"
        android:layout_width="250dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Name_organization" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/name_organization"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/name_organization"
        app:layout_constraintTop_toBottomOf="@id/name_organization"
        tools:text="@string/edit_nmck_author" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_N"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/number_guards" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.OptionsButton"
        android:layout_width="@dimen/icon_button_min_size"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_option_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids=" title_N"
        tools:layout_editor_absoluteX="@dimen/common_spacing"
        tools:layout_editor_absoluteY="64dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_barrier"
        app:layout_constraintVertical_bias="0.333"
        tools:layout_editor_absoluteX="27dp"
        tools:listitem="@layout/step_calculation" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="stepsRecyclerView"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="719dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/add_new_calculation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>